--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,13 +20,13 @@ body{
     font-family: Oswald;
 }
 .maroon{
-    color: #89ffaf;
+    color: #1bce54;
 }
 .center-link{
     text-align: center;
 }
 a{
-  color: #89ffaf;
+  color: #1bce54;
   font-family: 'Josefin Sans';
 }
 
